--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <div class="fh5co_suceefh5co_height_position_absolute"></div>
                         <div class="fh5co_suceefh5co_height_position_absolute_font_2">
                             <div class=""><a href="articles/it/pourquoi_apprendre_c/fr/index.html" class="color_fff"> <i class="fa fa-clock-o"></i>&nbsp;&nbsp;Dec 31,2019 </a></div>
-                            <div class=""><a href="articles/it/pourquoi_apprendre_c/fr/index.html" class="fh5co_good_font_2"> Pourquoi apprendre le langage C </a></div>
+                            <div class=""><a href="articles/it/pourquoi_apprendre_c/fr/index.html" class="fh5co_good_font_2"> Pourquoi apprendre le langage C ? </a></div>
                         </div>
                     </div>
                 </div>
@@ -82,57 +82,61 @@
 <div class="container-fluid pt-3">
     <div class="container animate-box" data-animate-effect="fadeIn">
         <div>
-            <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">Trending</div>
+            <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">IT - Langages de programmation </div>
         </div>
         <div class="owl-carousel owl-theme js" id="slider1">
             <div class="item px-2">
                 <div class="fh5co_latest_trading_img_position_relative">
-                    <div class="fh5co_latest_trading_img"><img src="images/others/allef-vinicius-108153.jpg" alt=""
+                    <div class="fh5co_latest_trading_img"><img src="images/it/python.jpg" alt=""
                                                                class="fh5co_img_special_relative"/></div>
                     <div class="fh5co_latest_trading_img_position_absolute"></div>
                     <div class="fh5co_latest_trading_img_position_absolute_1">
-                        <a href="single.html" class="text-white"> Here's a new way to take better photos for instagram </a>
-                        <div class="fh5co_latest_trading_date_and_name_color"> Walter Johson - March 7,2017</div>
+                        <a href="articles/it/pourquoi_apprendre_python/fr/index.html" class="text-white"> Pourquoi apprendre Python ? </a>
+                        <div class="fh5co_latest_trading_date_and_name_color"> Dec 31,2020</div>
                     </div>
                 </div>
             </div>
             <div class="item px-2">
                 <div class="fh5co_latest_trading_img_position_relative">
-                    <div class="fh5co_latest_trading_img"><img src="images/others/abigail-keenan-65477.jpg" alt="" class="fh5co_img_special_relative"/></div>
+                    <div class="fh5co_latest_trading_img"><img src="images/it/Pourquoi-apprendre-à-programmer-en-C-800x445.jpg" alt=""
+                                                               class="fh5co_img_special_relative"/></div>
                     <div class="fh5co_latest_trading_img_position_absolute"></div>
                     <div class="fh5co_latest_trading_img_position_absolute_1">
-                        <a href="single.html" class="text-white"> Here's a new way to take better photos for instagram </a>
-                        <div class="fh5co_latest_trading_date_and_name_color"> Walter Johson - March 7,2017</div>
+                        <a href="articles/it/pourquoi_apprendre_c/fr/index.html" class="text-white"> Pourquoi apprendre C ? </a>
+                        <div class="fh5co_latest_trading_date_and_name_color"> Dec 31,2020</div>
                     </div>
                 </div>
             </div>
             <div class="item px-2">
                 <div class="fh5co_latest_trading_img_position_relative">
-                    <div class="fh5co_latest_trading_img"><img src="images/others/ryan-moreno-98837.jpg" alt="" class="fh5co_img_special_relative"/></div>
+                    <div class="fh5co_latest_trading_img"><img src="images/it/lignes-de-code-java-1600.jpg" alt=""
+                                                               class="fh5co_img_special_relative"/></div>
                     <div class="fh5co_latest_trading_img_position_absolute"></div>
                     <div class="fh5co_latest_trading_img_position_absolute_1">
-                        <a href="single.html" class="text-white"> Here's a new way to take better photos for instagram </a>
-                        <div class="fh5co_latest_trading_date_and_name_color"> Walter Johson - March 7,2017</div>
+                        <a href="articles/it/pourquoi_apprendre_java/fr/index.html" class="text-white"> Pourquoi apprendre Java ? </a>
+                        <div class="fh5co_latest_trading_date_and_name_color"> Dec 31,2020</div>
                     </div>
                 </div>
             </div>
             <div class="item px-2">
                 <div class="fh5co_latest_trading_img_position_relative">
-                    <div class="fh5co_latest_trading_img"><img src="images/others/science-578x362.jpg" alt="" class="fh5co_img_special_relative"/></div>
+                    <div class="fh5co_latest_trading_img"><img src="images/it/programming-cplus.jpg" alt=""
+                                                               class="fh5co_img_special_relative"/></div>
                     <div class="fh5co_latest_trading_img_position_absolute"></div>
                     <div class="fh5co_latest_trading_img_position_absolute_1">
-                        <a href="single.html" class="text-white"> Here's a new way to take better photos for instagram </a>
-                        <div class="fh5co_latest_trading_date_and_name_color"> Walter Johson - March 7,2017</div>
+                        <a href="articles/it/pourquoi_apprendre_c++/fr/index.html" class="text-white"> Pourquoi apprendre C++ ? </a>
+                        <div class="fh5co_latest_trading_date_and_name_color"> Dec 31,2020</div>
                     </div>
                 </div>
             </div>
             <div class="item px-2">
                 <div class="fh5co_latest_trading_img_position_relative">
-                    <div class="fh5co_latest_trading_img"><img src="images/others/nick-karvounis-78711.jpg" alt="" class="fh5co_img_special_relative"/></div>
+                    <div class="fh5co_latest_trading_img"><img src="images/it/javascript.jpg" alt=""
+                                                               class="fh5co_img_special_relative"/></div>
                     <div class="fh5co_latest_trading_img_position_absolute"></div>
                     <div class="fh5co_latest_trading_img_position_absolute_1">
-                        <a href="single.html" class="text-white"> Here's a new way to take better photos for instagram </a>
-                        <div class="fh5co_latest_trading_date_and_name_color"> Walter Johson - March 7,2017</div>
+                        <a href="articles/it/pourquoi_apprendre_javascript/fr/index.html" class="text-white"> Pourquoi apprendre Javascript ? </a>
+                        <div class="fh5co_latest_trading_date_and_name_color"> Dec 31,2020</div>
                     </div>
                 </div>
             </div>
