--- a/blog.html
+++ b/blog.html
@@ -102,7 +102,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
+            <!--div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
                 <div>
                     <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">Tags</div>
                 </div>
@@ -159,59 +159,136 @@
                         <div class="most_fh5co_treding_font_123"> April 18, 2016</div>
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class="row mx-0">
-            <div class="col-12 text-center pb-4 pt-4">
-                <a href="#" class="btn_mange_pagging"><i class="fa fa-long-arrow-left"></i>&nbsp;&nbsp; Previous</a>
-                <a href="#" class="btn_pagging">1</a>
-                <a href="#" class="btn_pagging">2</a>
-                <a href="#" class="btn_pagging">3</a>
-                <a href="#" class="btn_pagging">...</a>
-                <a href="#" class="btn_mange_pagging">Next <i class="fa fa-long-arrow-right"></i>&nbsp;&nbsp; </a>
-             </div>
+            </div-->
         </div>
     </div>
 </div>
+
+<!-- Langages de programmation -->
 <div class="container-fluid pb-4 pt-5">
     <div class="container animate-box">
         <div>
-            <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">Trending</div>
+            <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">IT- Langages de programmations</div>
         </div>
-        <div class="owl-carousel owl-theme" id="slider2">
+        <div class="owl-carousel owl-theme js" id="slider3">
             <div class="item px-2">
-                <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/others/39-324x235.jpg" alt=""/></div>
-                    <div>
-                        <a href="#" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
-                        <div class="c_g"><i class="fa fa-clock-o"></i> Oct 16,2017</div>
+                <div class="fh5co_latest_trading_img_position_relative">
+                    <div class="fh5co_latest_trading_img"><img src="images/it/python.jpg" alt=""
+                                                               class="fh5co_img_special_relative"/></div>
+                    <div class="fh5co_latest_trading_img_position_absolute"></div>
+                    <div class="fh5co_latest_trading_img_position_absolute_1">
+                        <a href="articles/it/pourquoi_apprendre_python/fr/index.html" class="text-white"> Pourquoi apprendre Python ? </a>
+                        <div class="fh5co_latest_trading_date_and_name_color"> Dec 31,2020</div>
                     </div>
                 </div>
             </div>
             <div class="item px-2">
-                <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/others/joe-gardner-75333.jpg" alt=""/></div>
-                    <div>
-                        <a href="#" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
-                        <div class="c_g"><i class="fa fa-clock-o"></i> Oct 16,2017</div>
+                <div class="fh5co_latest_trading_img_position_relative">
+                    <div class="fh5co_latest_trading_img"><img src="images/it/Pourquoi-apprendre-à-programmer-en-C-800x445.jpg" alt=""
+                                                               class="fh5co_img_special_relative"/></div>
+                    <div class="fh5co_latest_trading_img_position_absolute"></div>
+                    <div class="fh5co_latest_trading_img_position_absolute_1">
+                        <a href="articles/it/pourquoi_apprendre_c/fr/index.html" class="text-white"> Pourquoi apprendre C ? </a>
+                        <div class="fh5co_latest_trading_date_and_name_color"> Dec 31,2020</div>
                     </div>
                 </div>
             </div>
             <div class="item px-2">
-                <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/others/ryan-moreno-98837.jpg" alt=""/></div>
-                    <div>
-                        <a href="#" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
-                        <div class="c_g"><i class="fa fa-clock-o"></i> Oct 16,2017</div>
+                <div class="fh5co_latest_trading_img_position_relative">
+                    <div class="fh5co_latest_trading_img"><img src="images/it/lignes-de-code-java-1600.jpg" alt=""
+                                                               class="fh5co_img_special_relative"/></div>
+                    <div class="fh5co_latest_trading_img_position_absolute"></div>
+                    <div class="fh5co_latest_trading_img_position_absolute_1">
+                        <a href="articles/it/pourquoi_apprendre_java/fr/index.html" class="text-white"> Pourquoi apprendre Java ? </a>
+                        <div class="fh5co_latest_trading_date_and_name_color"> Dec 31,2020</div>
                     </div>
                 </div>
             </div>
             <div class="item px-2">
-                <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/others/seth-doyle-133175.jpg" alt=""/></div>
-                    <div>
-                        <a href="#" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
-                        <div class="c_g"><i class="fa fa-clock-o"></i> Oct 16,2017</div>
+                <div class="fh5co_latest_trading_img_position_relative">
+                    <div class="fh5co_latest_trading_img"><img src="images/it/programming-cplus.jpg" alt=""
+                                                               class="fh5co_img_special_relative"/></div>
+                    <div class="fh5co_latest_trading_img_position_absolute"></div>
+                    <div class="fh5co_latest_trading_img_position_absolute_1">
+                        <a href="articles/it/pourquoi_apprendre_c++/fr/index.html" class="text-white"> Pourquoi apprendre C++ ? </a>
+                        <div class="fh5co_latest_trading_date_and_name_color"> Dec 31,2020</div>
+                    </div>
+                </div>
+            </div>
+            <div class="item px-2">
+                <div class="fh5co_latest_trading_img_position_relative">
+                    <div class="fh5co_latest_trading_img"><img src="images/it/javascript.jpg" alt=""
+                                                               class="fh5co_img_special_relative"/></div>
+                    <div class="fh5co_latest_trading_img_position_absolute"></div>
+                    <div class="fh5co_latest_trading_img_position_absolute_1">
+                        <a href="articles/it/pourquoi_apprendre_javascript/fr/index.html" class="text-white"> Pourquoi apprendre Javascript ? </a>
+                        <div class="fh5co_latest_trading_date_and_name_color"> Dec 31,2020</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="container-fluid pb-4 pt-5">
+    <div class="container animate-box">
+        <div>
+            <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">IT- Langages de programmations</div>
+        </div>
+        <div class="owl-carousel owl-theme js" id="slider1">
+            <div class="item px-2">
+                <div class="fh5co_latest_trading_img_position_relative">
+                    <div class="fh5co_latest_trading_img"><img src="images/it/python.jpg" alt=""
+                                                               class="fh5co_img_special_relative"/></div>
+                    <div class="fh5co_latest_trading_img_position_absolute"></div>
+                    <div class="fh5co_latest_trading_img_position_absolute_1">
+                        <a href="articles/it/pourquoi_apprendre_python/fr/index.html" class="text-white"> Pourquoi apprendre Python ? </a>
+                        <div class="fh5co_latest_trading_date_and_name_color"> Dec 31,2020</div>
+                    </div>
+                </div>
+            </div>
+            <div class="item px-2">
+                <div class="fh5co_latest_trading_img_position_relative">
+                    <div class="fh5co_latest_trading_img"><img src="images/it/Pourquoi-apprendre-à-programmer-en-C-800x445.jpg" alt=""
+                                                               class="fh5co_img_special_relative"/></div>
+                    <div class="fh5co_latest_trading_img_position_absolute"></div>
+                    <div class="fh5co_latest_trading_img_position_absolute_1">
+                        <a href="articles/it/pourquoi_apprendre_c/fr/index.html" class="text-white"> Pourquoi apprendre C ? </a>
+                        <div class="fh5co_latest_trading_date_and_name_color"> Dec 31,2020</div>
+                    </div>
+                </div>
+            </div>
+            <div class="item px-2">
+                <div class="fh5co_latest_trading_img_position_relative">
+                    <div class="fh5co_latest_trading_img"><img src="images/it/lignes-de-code-java-1600.jpg" alt=""
+                                                               class="fh5co_img_special_relative"/></div>
+                    <div class="fh5co_latest_trading_img_position_absolute"></div>
+                    <div class="fh5co_latest_trading_img_position_absolute_1">
+                        <a href="articles/it/pourquoi_apprendre_java/fr/index.html" class="text-white"> Pourquoi apprendre Java ? </a>
+                        <div class="fh5co_latest_trading_date_and_name_color"> Dec 31,2020</div>
+                    </div>
+                </div>
+            </div>
+            <div class="item px-2">
+                <div class="fh5co_latest_trading_img_position_relative">
+                    <div class="fh5co_latest_trading_img"><img src="images/it/programming-cplus.jpg" alt=""
+                                                               class="fh5co_img_special_relative"/></div>
+                    <div class="fh5co_latest_trading_img_position_absolute"></div>
+                    <div class="fh5co_latest_trading_img_position_absolute_1">
+                        <a href="articles/it/pourquoi_apprendre_c++/fr/index.html" class="text-white"> Pourquoi apprendre C++ ? </a>
+                        <div class="fh5co_latest_trading_date_and_name_color"> Dec 31,2020</div>
+                    </div>
+                </div>
+            </div>
+            <div class="item px-2">
+                <div class="fh5co_latest_trading_img_position_relative">
+                    <div class="fh5co_latest_trading_img"><img src="images/it/javascript.jpg" alt=""
+                                                               class="fh5co_img_special_relative"/></div>
+                    <div class="fh5co_latest_trading_img_position_absolute"></div>
+                    <div class="fh5co_latest_trading_img_position_absolute_1">
+                        <a href="articles/it/pourquoi_apprendre_javascript/fr/index.html" class="text-white"> Pourquoi apprendre Javascript ? </a>
+                        <div class="fh5co_latest_trading_date_and_name_color"> Dec 31,2020</div>
                     </div>
                 </div>
             </div>
