--- a/blog.html
+++ b/blog.html
@@ -31,76 +31,67 @@
                 <div class="row pb-4">
                     <div class="col-md-5">
                         <div class="fh5co_hover_news_img">
-                            <div class="fh5co_news_img"><img src="images/others/nathan-mcbride-229637.jpg" alt=""/></div>
+                            <div class="fh5co_news_img"><img src="images/marketing/marketing_general.jpeg" alt=""/></div>
                             <div></div>
                         </div>
                     </div>
                     <div class="col-md-7 animate-box">
-                        <a href="single.html" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis
-                        nostrud quis xercitation ullamco. </a> <a href="#" class="fh5co_mini_time py-3"> Thomson Smith -
-                        April 18,2016 </a>
-                        <div class="fh5co_consectetur"> Amet consectetur adipisicing elit, sed do eiusmod tempor incididunt
-                            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.
+                        <a href="articles/Marketing/pourquoi_apprendre_digital_marqueting/fr/index.html" class="fh5co_magna py-2"> Pourquoi
+                            apprendre le marketing digital ?
+                        </a> <a href="articles/Marketing/pourquoi_apprendre_digital_marqueting/fr/index.html"
+                                class="fh5co_mini_time py-3">April 13,2020 </a>
+                        <div class="fh5co_consectetur">
+                            Qu’on le veuille ou non, nous vivons baigné dans la marketing, que ce soit à la télévision,
+                            dans les journaux, sur le net. Alors pourquoi ne pas savoir un minimum comment ça fonctionne.
+                            Connaître les mécanismes et les techniques vous donnera des informations sur ce qui fonctionne
+                            et ne fonctionne pas chez vous.
                         </div>
                     </div>
                 </div>
+
                 <div class="row pb-4">
                     <div class="col-md-5">
                         <div class="fh5co_hover_news_img">
-                            <div class="fh5co_news_img"><img src="images/others/ryan-moreno-98837.jpg" alt=""/></div>
+                            <div class="fh5co_news_img"><img src="images/metier/dev_web.jpg" alt=""/></div>
                             <div></div>
                         </div>
                     </div>
-                    <div class="col-md-7">
-                        <a href="single.html" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis
-                        nostrud quis xercitation ullamco. </a> <a href="#" class="fh5co_mini_time py-3"> Thomson Smith -
-                        April 18,2016 </a>
-                        <div class="fh5co_consectetur"> Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                            dolore.
+                    <div class="col-md-7 animate-box">
+                        <a href="articles/metier_informatique/pourquoi_devenir_dev_web/fr/index.html" class="fh5co_magna py-2"> Pourquoi
+                            devenir developpeur Web?
+                            <br>
+                        </a> <a href="articles/metier_informatique/pourquoi_devenir_dev_web/fr/index.html"
+                                class="fh5co_mini_time py-3">April 13,2020 </a>
+                        <div class="fh5co_consectetur">
+                            Les métiers du numérique ne cessant de se développer, la demande est plus forte que l’offre.
+                            Pour pallier cette carence en compétences, des formations sont apparu. Cela vous donne
+                            beaucoup de hoix de métiers possibles dans ce secteur d’activité.
                         </div>
-                        <ul class="fh5co_gaming_topikk pt-3">
-                            <li> Why 2017 Might Just Be the Worst Year Ever for Gaming</li>
-                            <li> Ghost Racer Wants to Be the Most Ambitious Car Game</li>
-                            <li> New Nintendo Wii Console Goes on Sale in Strategy Reboot</li>
-                            <li> You and Your Kids can Enjoy this News Gaming Console</li>
-                        </ul>
                     </div>
                 </div>
+
                 <div class="row pb-4">
                     <div class="col-md-5">
                         <div class="fh5co_hover_news_img">
-                            <div class="fh5co_news_img">
-                                <img src="images/others/photo-1449157291145-7efd050a4d0e-578x362.jpg" alt=""/>
-                            </div>
+                            <div class="fh5co_news_img"><img src="images/metier/webdesigner.jpg" alt=""/></div>
                             <div></div>
                         </div>
                     </div>
-                    <div class="col-md-7">
-                        <a href="single.html" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis
-                        nostrud quis xercitation ullamco. </a> <a href="#" class="fh5co_mini_time py-3"> Thomson Smith -
-                        April 18,2016 </a>
-                        <div class="fh5co_consectetur"> Quis nostrud xercitation ullamco laboris nisi aliquip ex ea commodo
-                            consequat.
+                    <div class="col-md-7 animate-box">
+                        <a href="articles/metier_informatique/pourquoi_devenir_webdesigner/fr/index.html" class="fh5co_magna py-2"> Pourquoi
+                            devenir Webdesigner?
+                            <br>
+                        </a> <a href="articles/metier_informatique/pourquoi_devenir_webdesigner/fr/index.html"
+                                class="fh5co_mini_time py-3">April 13,2020 </a>
+                        <div class="fh5co_consectetur">
+                            Le webdesign est l'association de deux mots, web et design qui signifient littéralement
+                            "toile" et "dessiner", il est donc l'action de dessiner pour le web. Il nous faut cependant
+                            nous pencher plus en avant sur la définition du design, appelée aussi graphisme pour mieux
+                            définir le webdesign.
                         </div>
                     </div>
                 </div>
-                <div class="row pb-4">
-                    <div class="col-md-5">
-                        <div class="fh5co_hover_news_img">
-                            <div class="fh5co_news_img"><img src="images/others/office-768x512.jpg" alt=""/></div>
-                            <div></div>
-                        </div>
-                    </div>
-                    <div class="col-md-7">
-                        <a href="single.html" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis
-                        nostrud quis xercitation ullamco. </a> <a href="#" class="fh5co_mini_time py-3"> Thomson Smith -
-                        April 18,2016 </a>
-                        <div class="fh5co_consectetur"> Amet consectetur adipisicing elit, sed do eiusmod tempor incididunt
-                            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.
-                        </div>
-                    </div>
-                </div>
+
             </div>
             <!--div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
                 <div>
@@ -234,60 +225,60 @@
 <div class="container-fluid pb-4 pt-5">
     <div class="container animate-box">
         <div>
-            <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">IT- Langages de programmations</div>
+            <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">MARKETING</div>
         </div>
-        <div class="owl-carousel owl-theme js" id="slider1">
+        <div class="owl-carousel owl-theme" id="slider1">
             <div class="item px-2">
                 <div class="fh5co_latest_trading_img_position_relative">
-                    <div class="fh5co_latest_trading_img"><img src="images/it/python.jpg" alt=""
+                    <div class="fh5co_latest_trading_img"><img src="images/marketing/marketing_general.jpeg" alt=""
                                                                class="fh5co_img_special_relative"/></div>
                     <div class="fh5co_latest_trading_img_position_absolute"></div>
                     <div class="fh5co_latest_trading_img_position_absolute_1">
-                        <a href="articles/it/pourquoi_apprendre_python/fr/index.html" class="text-white"> Pourquoi apprendre Python ? </a>
+                        <a href="articles/Marketing/pourquoi_apprendre_digital_marqueting/fr/index.html" class="text-white"> Pourquoi apprendre le Marketing ? </a>
                         <div class="fh5co_latest_trading_date_and_name_color"> Dec 31,2020</div>
                     </div>
                 </div>
             </div>
             <div class="item px-2">
                 <div class="fh5co_latest_trading_img_position_relative">
-                    <div class="fh5co_latest_trading_img"><img src="images/it/Pourquoi-apprendre-à-programmer-en-C-800x445.jpg" alt=""
+                    <div class="fh5co_latest_trading_img"><img src="images/marketing/les-metiers-du-marketing.jpg" alt=""
                                                                class="fh5co_img_special_relative"/></div>
                     <div class="fh5co_latest_trading_img_position_absolute"></div>
                     <div class="fh5co_latest_trading_img_position_absolute_1">
-                        <a href="articles/it/pourquoi_apprendre_c/fr/index.html" class="text-white"> Pourquoi apprendre C ? </a>
+                        <a href="articles/Marketing/pourquoi_apprendre_marketing_general/fr/index.html" class="text-white"> Pourquoi apprendre le marketing general ? </a>
                         <div class="fh5co_latest_trading_date_and_name_color"> Dec 31,2020</div>
                     </div>
                 </div>
             </div>
             <div class="item px-2">
                 <div class="fh5co_latest_trading_img_position_relative">
-                    <div class="fh5co_latest_trading_img"><img src="images/it/lignes-de-code-java-1600.jpg" alt=""
+                    <div class="fh5co_latest_trading_img"><img src="images/marketing/marketing_beaute_top.jpg" alt=""
                                                                class="fh5co_img_special_relative"/></div>
                     <div class="fh5co_latest_trading_img_position_absolute"></div>
                     <div class="fh5co_latest_trading_img_position_absolute_1">
-                        <a href="articles/it/pourquoi_apprendre_java/fr/index.html" class="text-white"> Pourquoi apprendre Java ? </a>
+                        <a href="articles/Marketing/pourquoi_apprendre_marketing_influence/fr/index.html" class="text-white"> Pourquoi apprendre le marketing d'influence ? </a>
                         <div class="fh5co_latest_trading_date_and_name_color"> Dec 31,2020</div>
                     </div>
                 </div>
             </div>
             <div class="item px-2">
                 <div class="fh5co_latest_trading_img_position_relative">
-                    <div class="fh5co_latest_trading_img"><img src="images/it/programming-cplus.jpg" alt=""
+                    <div class="fh5co_latest_trading_img"><img src="images/marketing/marketing_appli.jpg" alt=""
                                                                class="fh5co_img_special_relative"/></div>
                     <div class="fh5co_latest_trading_img_position_absolute"></div>
                     <div class="fh5co_latest_trading_img_position_absolute_1">
-                        <a href="articles/it/pourquoi_apprendre_c++/fr/index.html" class="text-white"> Pourquoi apprendre C++ ? </a>
+                        <a href="articles/Marketing/pourquoi_apprendre_marketing_lancer_une_apli/fr/index.html" class="text-white"> Pourquoi apprendre le Marketing pour promouvoir une application ? </a>
                         <div class="fh5co_latest_trading_date_and_name_color"> Dec 31,2020</div>
                     </div>
                 </div>
             </div>
             <div class="item px-2">
                 <div class="fh5co_latest_trading_img_position_relative">
-                    <div class="fh5co_latest_trading_img"><img src="images/it/javascript.jpg" alt=""
+                    <div class="fh5co_latest_trading_img"><img src="images/marketing/marketing_produit.jpg" alt=""
                                                                class="fh5co_img_special_relative"/></div>
                     <div class="fh5co_latest_trading_img_position_absolute"></div>
                     <div class="fh5co_latest_trading_img_position_absolute_1">
-                        <a href="articles/it/pourquoi_apprendre_javascript/fr/index.html" class="text-white"> Pourquoi apprendre Javascript ? </a>
+                        <a href="articles/Marketing/pourquoi_apprendre_marketing_nouveau_produit_marcher/fr/index.html" class="text-white"> Pourquoi apprendre le Marketing pour promouvoir un produit ? </a>
                         <div class="fh5co_latest_trading_date_and_name_color"> Dec 31,2020</div>
                     </div>
                 </div>
@@ -296,6 +287,71 @@
     </div>
 </div>
 
+<!-- Metier du Web-->
+<div class="container-fluid pb-4 pt-5">
+    <div class="container animate-box">
+        <div>
+            <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">METIERS DU WEB</div>
+        </div>
+        <div class="owl-carousel owl-theme" id="slider2">
+            <div class="item px-2">
+                <div class="fh5co_latest_trading_img_position_relative">
+                    <div class="fh5co_latest_trading_img"><img src="images/metier/dev_web.jpg" alt=""
+                                                               class="fh5co_img_special_relative"/></div>
+                    <div class="fh5co_latest_trading_img_position_absolute"></div>
+                    <div class="fh5co_latest_trading_img_position_absolute_1">
+                        <a href="articles/metier_informatique/pourquoi_devenir_dev_web/fr/index.html" class="text-white"> Pourquoi devenir Developpeur Web ? </a>
+                        <div class="fh5co_latest_trading_date_and_name_color"> Avril 13,2020</div>
+                    </div>
+                </div>
+            </div>
+            <div class="item px-2">
+                <div class="fh5co_latest_trading_img_position_relative">
+                    <div class="fh5co_latest_trading_img"><img src="images/metier/web_master.jpg" alt=""
+                                                               class="fh5co_img_special_relative"/></div>
+                    <div class="fh5co_latest_trading_img_position_absolute"></div>
+                    <div class="fh5co_latest_trading_img_position_absolute_1">
+                        <a href="articles/metier_informatique/pourquoi_devenir_webmaster/fr/index.html" class="text-white"> Pourquoi devenir Webmaster ? </a>
+                        <div class="fh5co_latest_trading_date_and_name_color"> Avril 13,2020</div>
+                    </div>
+                </div>
+            </div>
+            <div class="item px-2">
+                <div class="fh5co_latest_trading_img_position_relative">
+                    <div class="fh5co_latest_trading_img"><img src="images/metier/webdesigner.jpg" alt=""
+                                                               class="fh5co_img_special_relative"/></div>
+                    <div class="fh5co_latest_trading_img_position_absolute"></div>
+                    <div class="fh5co_latest_trading_img_position_absolute_1">
+                        <a href="articles/metier_informatique/pourquoi_devenir_webdesigner/fr/index.html" class="text-white"> Pourquoi devenir Web Designer? </a>
+                        <div class="fh5co_latest_trading_date_and_name_color"> Avril 13,2020</div>
+                    </div>
+                </div>
+            </div>
+            <div class="item px-2">
+                <div class="fh5co_latest_trading_img_position_relative">
+                    <div class="fh5co_latest_trading_img"><img src="images/metier/dev_wordpress.jpg" alt=""
+                                                               class="fh5co_img_special_relative"/></div>
+                    <div class="fh5co_latest_trading_img_position_absolute"></div>
+                    <div class="fh5co_latest_trading_img_position_absolute_1">
+                        <a href="articles/metier_informatique/pourquoi_devenir_dev_wordpress/fr/index.html" class="text-white"> Pourquoi devenir Developpeur Wordpress ? </a>
+                        <div class="fh5co_latest_trading_date_and_name_color"> Avril 13,2020</div>
+                    </div>
+                </div>
+            </div>
+            <div class="item px-2">
+                <div class="fh5co_latest_trading_img_position_relative">
+                    <div class="fh5co_latest_trading_img"><img src="images/metier/integrateur_web.png" alt=""
+                                                               class="fh5co_img_special_relative"/></div>
+                    <div class="fh5co_latest_trading_img_position_absolute"></div>
+                    <div class="fh5co_latest_trading_img_position_absolute_1">
+                        <a href="articles/metier_informatique/pourquoi_devenir_integrateur_web/fr/index.html" class="text-white"> Pourquoi devenir integrateur Web ? </a>
+                        <div class="fh5co_latest_trading_date_and_name_color"> Avril 13,2020</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <div id="footer-loader" data-include="footer.html"></div>
 <script src="js/vendors/jquery/jquery.js"></script>
 <script src="js/vendors/owl.carousel/owl.carousel.min.js"></script>
